<resources>
    <string name="app_name">ReturnPals</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="title_activity_login_screen">LoginScreen</string>
    <string name="title_activity_guest_screen">GuestScreen</string>
    <string name="title_activity_member_screen">MemberScreen</string>
    <string name="title_activity_dash_board_screen">DashBoardScreen</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">ReturnPal</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">About Us</string>
    <string name="menu_slideshow">Contact Us</string>
    <string name="menu_settings">Security</string>
    <string name="sign_out">Sign Out</string>
    <string name="title_activity_home">Home</string>
</resources>